# PlayingCMake

./: CMakeLists.txt  MainConfig.h.in  README.md  main.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
